--- a/public_html/pagenavi.css
+++ b/public_html/pagenavi.css
@@ -1,7 +1,15 @@
 #blog-pager{clear:both;margin:30px auto;text-align: center;padding: 7px;}
 #blog-pager2{clear:both;text-align: center;padding: 7px;overflow: hidden;}
 .blog-pager {background: none;}
-.displaypageNum a,.showpage a,.pagecurrent{padding: 5px 10px;margin-right:5px; color: #fff; background-color:#2973FC;-webkit-box-shadow: 0px 5px 3px -1px rgba(50, 50, 50, 0.53);-moz-box-shadow:0px 5px 3px -1px rgba(50, 50, 50, 0.53);box-shadow: 0px 5px 3px -1px rgba(50, 50, 50, 0.53);}
+.displaypageNum a,.showpage a,.pagecurrent{
+    padding: 5px 10px;
+    margin-right:5px; 
+    color: #fff; 
+    background-color:#2973FC;
+    -webkit-box-shadow: 0px 5px 3px -1px rgba(50, 50, 50, 0.53);
+    -moz-box-shadow:0px 5px 3px -1px rgba(50, 50, 50, 0.53);
+    box-shadow: 0px 5px 3px -1px rgba(50, 50, 50, 0.53);
+}
 .displaypageNum a:hover,.showpage a:hover, .pagecurrent{background:#000;text-decoration:none;color: #fff;}
 #blog-pager .showpage, #blog-pager, .pagecurrent{font-weight:bold;color: #fff;}
 #blog-pager .pages{border:#2973FC;-webkit-box-shadow: 0px 5px 3px -1px rgba(50, 50, 50, 0.53);-moz-box-shadow:0px 5px 3px -1px rgba(50, 50, 50, 0.53);box-shadow: 0px 5px 3px -1px rgba(50, 50, 50, 0.53);}
